fix: move offscreen different way

--- a/src/SpotifyPlayer.module.css
+++ b/src/SpotifyPlayer.module.css
@@ -1,4 +1,3 @@
 .player {
-    position: absolute;
-    transform: translateX(-99999px) translateY(-99999px);
+    opacity: 0;
 }
